--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-   "build": "echo 'skip build'",
-  "dev": "ts-node server.ts",
-    "start": "node ./dist/index.js"
+    "build": "tsc",
+    "start": "node ./dist/index.js",
+    "dev": "ts-node-dev src/index.ts"
   },
   "keywords": [],
   "author": "",
