--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@fontsource/outfit": "^5.2.8",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-query": "^5.90.21",
+    "axios": "^1.13.5",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
