--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "@prisma/client": "^7.3.0",
     "bcrypt": "^6.0.0",
     "better-auth": "^1.4.18",
+    "bullmq": "^5.69.3",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
