--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,8 @@ services:
     name: fast-convert-server
     runtime: docker
     env: docker
-    dockerContext: .
-    dockerfilePath: server/Dockerfile
+    dockerContext: server
+    dockerfilePath: Dockerfile
     envVars:
       - key: PORT
         value: 5000
